# ERPNext_Theme

./: MANIFEST.in  README-N45.md  README.md  hooks.py  modules.txt  pyproject.toml  requirements.txt  setup.py
events/: notification_log.py
nxt_theme/doctype/calendar_fields/: calendar_fields.json  calendar_fields.py
nxt_theme/doctype/theme_settings/: test_theme_settings.py  theme_settings.json
nxt_theme/events/: sidebar.py
nxt_theme/nxt_theme/doctype/theme_settings/: theme_settings.js  theme_settings.py
nxt_theme/public/: n45_overrides.bundle.scss  nxt_theme.bundle.js  nxt_theme_login.bundle.scss
nxt_theme/templates/: base.html  web.html
nxt_theme/templates/includes/: splash_screen.html
nxt_theme/www/: select.html
public/: n45_overrides.bundle.js  nxt_theme.bundle.scss
templates/includes/: sidebar_menu.html
templates/layouts/: login.html
www/: app.html  login.html  login.py
